src/objects/Contract.object
<CustomObject>
    <fields>
        <fullName>Quote_Index_Adder_Total__c</fullName>
        <label>Quote Index Adder Total</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quote_Index_Name__c</fullName>
        <label>Quote Index Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RENEWABLE_CHARGE_CONTRACT_PRICE__c</fullName>
        <formula>IF( Product_Name__c =&apos;FP-ONE-PT-C&apos;|| Product_Name__c = &apos;FP-MULT&apos;|| Product_Name__c = &apos;FP-MULT-PT-C&apos;|| Product_Name__c =&apos;FP-MULT-PT-L&apos;|| Product_Name__c = &apos;FP-MULT-PT-T&apos;|| Product_Name__c = &apos;FP-MULT-PT-CL&apos;|| Product_Name__c = &apos;FP-MULT-PT-CLT&apos;|| Product_Name__c = &apos;FP-MULT-PT-LT&apos;|| Product_Name__c = &apos;FP-MULT-PT-CT&apos;|| Product_Name__c =&apos;FP-ONOFF&apos;|| Product_Name__c =&apos;FP-ONOFF-PT-C&apos;|| Product_Name__c =&apos;FP-ONOFF-PT-CL&apos;|| Product_Name__c =&apos;FP-ONOFF-PT-CLT&apos;|| Product_Name__c =&apos;FP-ONOFF-PT-L&apos;|| Product_Name__c =&apos;FP-ONOFF-PT-T&apos;|| Product_Name__c =&apos;FP-ONOFF-PT-CT&apos;|| Product_Name__c =&apos;FP-ONOFF-PT-LT&apos; ,TEXT((RPS__c)/1000),&apos;N/A&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RENEWABLE CHARGE CONTRACT PRICE</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RPS_Price__c</fullName>
        <formula>RPS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RPS Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RPS__c</fullName>
        <label>RPS</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rate_Code__c</fullName>
        <label>Rate Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rec_Rate__c</fullName>
        <formula>Vol_Rec__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rec Rate</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Receive_Invoices_By__c</fullName>
        <label>Receive Invoices By</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mail</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Online Notice</fullName>
                </value>
                <value>
                    <fullName>Email &amp; Mail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Referral_Broker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referral Broker</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resigned__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is created during the iAve Conversion.</description>
        <label>Resigned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Retail_Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Retail Quote</label>
        <referenceTo>Retail_Quote__c</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Territory__c</fullName>
        <label>Service Territory</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Service_Territory</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Shaping__c</fullName>
        <label>Shaping</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Signature_Block__c</fullName>
        <formula>IF( Supplier__r.Supplier_Code__c  = &apos;DESE&apos;, &apos;/servlet/servlet.FileDownload?file=015150000058XJR&apos;, &apos;servlet/servlet.FileDownload?file=015150000058XJS&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Signature Block</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is created to store the supplier information at contract level</description>
        <inlineHelpText>The legal retail entity selling to this customer (Dynegy Energy Services East, LLC)</inlineHelpText>
        <label>Operating Company</label>
        <referenceTo>Supplier__c</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Swing__c</fullName>
        <label>Swing</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TRANSMISSION_CHARGES_CONTRACT_PRICE__c</fullName>
        <formula>IF( Product_Name__c =&apos;FP-MULT&apos;||Product_Name__c =&apos;FP-MULT-PT-C&apos;|| Product_Name__c =&apos;FP-MULT-PT-L&apos;|| Product_Name__c=&apos;FP-MULT-PT-CL&apos;|| Product_Name__c = &apos;FP-ONOFF&apos;||Product_Name__c =&apos;FP-ONOFF-PT-CL&apos;|| Product_Name__c =&apos;FP-ONOFF-PT-L&apos;|| Product_Name__c =&apos;FP-ONOFF-PT-C&apos;,TEXT((ISO_NITS__c)/1000),

IF(Product_Name__c=&apos;FP-MULT-PT-T&apos;||Product_Name__c=&apos;FP-MULT-PT-CT&apos;||Product_Name__c =&apos;FP-MULT-PT-CLT&apos;||Product_Name__c =&apos;FP-MULT-PT-LT&apos;||Product_Name__c=&apos;FP-ONOFF-PT-T&apos;||Product_Name__c=&apos;FP-ONOFF-PT-CT&apos;||Product_Name__c=&apos;FP-ONOFF-PT-CLT&apos;||Product_Name__c=&apos;FP-ONOFF-PT-LT&apos;,&apos;pass thru&apos;,&apos;N/A&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TRANSMISSION CHARGES CONTRACT PRICE</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax__c</fullName>
        <label>Tax</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Priced_MWH__c</fullName>
        <label>Total Priced MWHrs</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UCB_POR1__c</fullName>
        <formula>UCB_POR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UCB/POR</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UCB_POR__c</fullName>
        <label>UCB-POR</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unsync_Contract_LDCs__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>To unsync all contract ldc&apos;s under that contract</inlineHelpText>
        <label>Unsync Contract LDCs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Utility_Loss__c</fullName>
        <label>Utility Loss</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Validation__c</fullName>
        <label>Validation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Validated</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Return</fullName>
                </value>
                <value>
                    <fullName>Modified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vol_Rec__c</fullName>
        <label>Vol Rec</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Voluntary_Rec_Percent__c</fullName>
        <formula>Retail_Quote__r.Voluntary_REC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Voluntary Rec %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>signature__c</fullName>
        <formula>IF(  Supplier__r.Supplier_Code__c = &apos;DESE&apos;, 
(&apos;Lauren Matson, Manager&apos;)&amp; BR() &amp; 
(&apos;Broker and InsideSales&apos;)&amp; BR() &amp; 
&apos;Dynegy Energy Services East, LLC&apos;, 
IF(  Supplier__r.Supplier_Code__c =  &apos;IPH&apos; ||  Account.Supplier__r.Supplier_Code__c= &apos;DES&apos;, 
(&apos;Michael grimes,Manager&apos;)&amp; BR() &amp; 
(&apos;Broker and InsideSales&apos;)&amp; BR() &amp; 
&apos;Homefield Energy&apos;, &apos;No value&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>signature</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllActivatedContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>All Activated Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllContracts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllDraftContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>All Draft Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllInApprovalContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>P</value>
        </filters>
        <label>All In Approval Contracts</label>
    </listViews>
    <listViews>
        <fullName>All_Draft_Contracts_After_May_6_2016</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <filters>
            <field>CONTRACT.START_DATE</field>
            <operation>greaterThan</operation>
            <value>5/6/2016</value>
        </filters>
        <filters>
            <field>CONTRACT.START_DATE</field>
            <operation>lessThan</operation>
            <value>1/1/2017</value>
        </filters>
        <label>All Draft Contracts After 5/6/16</label>
    </listViews>
    <listViews>
        <fullName>MyActivatedContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>My Activated Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyDraftContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>My Draft Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyInApprovalContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>P</value>
        </filters>
        <label>My In Approval Contracts</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>